UP-2488 Fully functional URL generation & parsing using a single unified model
git-svn-id: https://source.jasig.org/uPortal/branches/working-pluto-2.0@20999 f5dbab47-78f9-eb45-b975-e544023573eb